JixbeeRedesign/Components/Pages/Screens/Hours.razor.css
::deep .app-content {
    width: 100vw;
    padding: 20px;
    background-color: var(--background);
    display: flex;
    flex-direction: column;
    gap: 20px;
    min-height: calc(100vh - 44px);
    margin-top: 40px;
}

/* MudTabs */
::deep .hours-page .mud-tabs-tabbar-wrapper {
    transform: translateX(0px) !important;
}
::deep .hours-page .mud-tabs-scroll-button {
    display: none;
}
::deep .hours-page .mud-tabs-tabbar-content {
    margin: 0;
}
    ::deep .hours-page .mud-tabs-tabbar-content .mud-tabs-tabbar-wrapper {
        width: auto;
        justify-content: space-between;
    }
::deep .hours-page .mud-tabs-tabbar.mud-tabs-rounded {
    /*transform: translate(-5px);*/
}
::deep .hours-page .mud-tabs-tabbar .mud-tabs-tabbar-inner {
    min-height: 30px;
}
::deep .hours-page .tab-filter {
    border-radius: 8px;
    color: var(--black100);
    font-weight: 500;
    padding: 4px 12px;
    font-size: 14px;
}
    ::deep .hours-page .tab-filter.mud-tab {
        color: var(--gs400);
        min-width: fit-content !important;
        min-height: 30px;
        padding: 0 5px;
        text-transform: none;
    }

    ::deep .hours-page .tab-filter.active-tab {
        background-color: var(--primarycolor100);
        color: var(--white);
    }

::deep .hours-page .mud-tab.mud-tab-active:hover {
    background-color: var(--primarycolor100);
}
::deep .hours-page .mud-tab:hover {
    background-color: transparent;
}

::deep .hours-page .mud-tooltip-root.mud-tooltip-inline {
    min-width: 100px;
}

.time-selection-wrapper {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

::deep .time-selection {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
    margin: -8px 0;
}

    ::deep .time-selection span {
        color: var(--black50);
        font-size: 15px;
        font-weight: 600;
        text-transform: capitalize;
    }
    ::deep .time-selection svg {
        border-radius: 12px;
    }
    ::deep .time-selection svg:hover {
        background-color: var(--black10);
    }
    ::deep .time-selection svg:active {
        background-color: var(--black20);
    }

.text-link-button {
    font-size: 14px;
    text-align: center;
    color: var(--primarycolor100);
}

/* Available salary card */
.savings-card {
    display: flex;
    flex-direction: column;
    gap: 12px;
    font-size: 14px;
}

.available-salary {
    display: flex;
    justify-content: space-between;
    height: fit-content;
}

.available-salary-item {
    display: flex;
    flex-direction: column;
    color: var(--black50);
    font-weight: 500;
}

.week-overview-card {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.day-wrapper {
    display: flex;
    align-items: center;
    gap: 20px;
}

.day-text {
    min-width: 32px;
    font-weight: 500;
    color: var(--black50);
    font-size: 14px;
}

.progress-bar {
    width: 100%;
    height: 6px;
    border-radius: 3px;
    background-color: var(--primarycolor15);
}
.progress-fill {
    width: 50%;
    height: 100%;
    border-radius: 3px;
    background-color: var(--secondarycolor100);
}

.day-earning {
    min-width: 56px;
    font-weight: 500;
    font-size: 14px;
}
.day-earning.greyed-out {
    opacity: .5;
}

.hours-general-info {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.hours-general-info-item {
    display: flex;
    align-items: center;
    gap: 16px;
    font-size: 14px;
    font-weight: 500;
}

::deep .mud-chip-content {
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 12px;
    font-weight: 500;
}

